# Unreal-Cesium-Colosseum-VIO-Dataset-Generator

./: .env.example  .gitignore  README.md  VERSION.env
config/camera/: camera_640x480_10hz.yaml
config/environments/: high_altitude_300m.yaml
config/imu/: imu_100hz.yaml
config/simulator/: settings.fixedwing.validation.json  settings.template.json
config/trajectories/: excitation.yaml  figure8.yaml
docs/: ARCHITECTURE.md  DATASET_SPEC.md  DEPENDENCIES.md  FIXEDWING_AERODYNAMIC_MODEL_REFERENCE.html  FIXEDWING_AERODYNAMIC_MODEL_REFERENCE.md  FIXEDWING_INTEGRATION_STATUS.md  FIXEDWING_MVP_ESTIMATE.md  FIXEDWING_MVP_STATUS_2026-07-20.md  FIXEDWING_PX4_GAZEBO_PIPELINE_HANDOVER_2026-07-21.md  KAU_3D_BUILDING_AND_COLLISION_DEMO.md  REPOSITORY_POLICY.md
docs/handover/: README.md  UCC_VIO_Dataset_Generator_4th_Handover_Full_Dataset_Success_2026-07-18.md
scripts/: check_host.sh  fetch_external_dependencies.sh  verify_external_deps.sh
scripts/setup/: install_cesium_plugin.sh  setup_cesium_plugin.sh
sim/UCCVioDatasetSim/: UCCVioDatasetSim.uproject
sim/UCCVioDatasetSim/Config/: DefaultEditorSettings.ini  DefaultEngine.ini  DefaultGame.ini
sim/UCCVioDatasetSim/Source/: UCCVioDatasetSim.Target.cs  UCCVioDatasetSimEditor.Target.cs
tools/: check_camera_exact_10hz.py  check_vio_sensor_calibration.py
tools/cesium/ucc_cesium_cam0_bridge_v1/: 01_apply_cam0_bridge.sh  02_build_editor.sh  03_run_static_cam0_probe.sh  04_check_bridge_log.sh  (+3 more)
tools/fixedwing/: README.md
tools/fixedwing/ucc_fixedwing_mvp_v1/gz_plugin/: CMakeLists.txt  UccKinematicsPublisher.cpp
(+111 files in other folders)
